force-app/main/default/objects/DailyPitchingStats__c/DailyPitchingStats__c.object-meta.xml
<CustomObject>
    <label>投手成績(デイリー)</label>
    <nameField>
        <displayFormat>DP-{00000000}</displayFormat>
        <label>投手成績(デイリー)No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>