force-app/main/default/objects/DailyPitchingStats__c/fields/BB__c.field-meta.xml
<CustomField>
    <fullName>BB__c</fullName>
    <label>与四球</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>