force-app/main/default/objects/DailyPitchingStats__c/fields/ER__c.field-meta.xml
<CustomField>
    <fullName>ER__c</fullName>
    <label>自責点</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>