force-app/main/default/objects/DailyPitchingStats__c/fields/ERA__c.field-meta.xml
<CustomField>
    <fullName>ERA__c</fullName>
    <label>ERA</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>