force-app/main/default/objects/DailyPitchingStats__c/fields/GS__c.field-meta.xml
<CustomField>
    <fullName>GS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>先発</label>
    <type>Checkbox</type>
</CustomField>