force-app/main/default/objects/DailyPitchingStats__c/fields/H__c.field-meta.xml
<CustomField>
    <fullName>H__c</fullName>
    <label>被安打</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>