force-app/main/default/objects/DailyPitchingStats__c/fields/Home_Away__c.field-meta.xml
<CustomField>
    <fullName>Home_Away__c</fullName>
    <label>HOME/AWAY</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HOME</fullName>
            </value>
            <value>
                <fullName>AWAY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>