force-app/main/default/objects/DailyPitchingStats__c/fields/HR__c.field-meta.xml
<CustomField>
    <fullName>HR__c</fullName>
    <label>披本塁打</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>