force-app/main/default/objects/DailyPitchingStats__c/fields/IP__c.field-meta.xml
<CustomField>
    <fullName>IP__c</fullName>
    <label>投球回数</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>