force-app/main/default/objects/DailyPitchingStats__c/fields/player__c.field-meta.xml
<CustomField>
    <fullName>player__c</fullName>
    <label>選手</label>
    <referenceTo>player__c</referenceTo>
    <relationshipLabel>投手成績(デイリー)</relationshipLabel>
    <relationshipName>DailyPitch_Player</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>