force-app/main/default/objects/DailyPitchingStats__c/fields/SO__c.field-meta.xml
<CustomField>
    <fullName>SO__c</fullName>
    <label>奪三振</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>