force-app/main/default/objects/DailyPitchingStats__c/fields/SV__c.field-meta.xml
<CustomField>
    <fullName>SV__c</fullName>
    <defaultValue>false</defaultValue>
    <label>セーブ</label>
    <type>Checkbox</type>
</CustomField>