force-app/main/default/objects/DailyPitchingStats__c/fields/WHIP__c.field-meta.xml
<CustomField>
    <fullName>WHIP__c</fullName>
    <label>WHIP</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>